--- a/Eagle/Eagle.vcxproj.filters
+++ b/Eagle/Eagle.vcxproj.filters
@@ -1,42 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Исходные файлы">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Файлы заголовков">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Файлы ресурсов">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Eagle">
+      <UniqueIdentifier>{2390160D-8FA4-3EBE-5826-E21DC4F93AEF}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Eagle\Core.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
+    <ClInclude Include="src\Eagle.h" />
     <ClInclude Include="src\Eagle\Application.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Eagle</Filter>
     </ClInclude>
-    <ClInclude Include="src\Eagle.h">
-      <Filter>Файлы заголовков</Filter>
+    <ClInclude Include="src\Eagle\Core.h">
+      <Filter>Eagle</Filter>
     </ClInclude>
     <ClInclude Include="src\Eagle\EntryPoint.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Eagle</Filter>
     </ClInclude>
     <ClInclude Include="src\Eagle\Log.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Eagle</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Eagle\Application.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Eagle</Filter>
     </ClCompile>
     <ClCompile Include="src\Eagle\Log.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Eagle</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
