--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Eagle/vendor/spdlog"]
 	path = Eagle/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Eagle/vendor/GLFW"]
+	path = Eagle/vendor/GLFW
+	url = https://github.com/IceLuna/glfw
