--- a/Eagle/Eagle.vcxproj.filters
+++ b/Eagle/Eagle.vcxproj.filters
@@ -74,6 +74,8 @@
       <Filter>Eagle</Filter>
     </ClInclude>
     <ClInclude Include="src\egpch.h" />
+    <ClInclude Include="src\Eagle\Input.h" />
+    <ClInclude Include="src\Eagle\Platform\Windows\WindowsInput.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Eagle\Application.cpp">
@@ -98,5 +100,6 @@
       <Filter>Eagle\Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\egpch.cpp" />
+    <ClCompile Include="src\Eagle\Platform\Windows\WindowsInput.cpp" />
   </ItemGroup>
 </Project>
