--- a/SandBox/imgui.ini
+++ b/SandBox/imgui.ini
@@ -4,12 +4,32 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=346,2
-Size=550,698
+Pos=0,19
+Size=1280,347
 Collapsed=0
 
 [Window][Example: Log]
-Pos=60,60
-Size=500,400
+Pos=0,490
+Size=827,230
 Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1280,720
+Collapsed=0
+
+[Window][Example: Console]
+Pos=0,19
+Size=356,701
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Test]
+Pos=497,589
+Size=58,48
+Collapsed=0
+
+[Docking][Data]
+DockSpace   ID=0x3BC79352 Pos=554,219 Size=1280,701 Split=X
+  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=356,701 Selected=0x46B5E99C
+  DockNode  ID=0x00000006 Parent=0x3BC79352 SizeRef=922,701 CentralNode=1 Selected=0xE927CF2F
 
