--- a/SandBox/imgui.ini
+++ b/SandBox/imgui.ini
@@ -4,32 +4,41 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,19
-Size=1280,347
-Collapsed=0
+Pos=810,3
+Size=470,701
+Collapsed=1
 
 [Window][Example: Log]
-Pos=0,490
-Size=827,230
+Pos=0,19
+Size=338,701
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][DockSpace Demo]
 Size=1280,720
 Collapsed=0
 
 [Window][Example: Console]
-Pos=0,19
-Size=356,701
+Pos=340,19
+Size=468,220
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000003,0
 
 [Window][Test]
 Pos=497,589
 Size=58,48
 Collapsed=0
 
+[Window][Example: Property editor]
+Pos=0,19
+Size=824,351
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Pos=554,219 Size=1280,701 Split=X
-  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=356,701 Selected=0x46B5E99C
-  DockNode  ID=0x00000006 Parent=0x3BC79352 SizeRef=922,701 CentralNode=1 Selected=0xE927CF2F
+DockSpace     ID=0x3BC79352 Pos=184,111 Size=1280,701 Split=X
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=338,701 Selected=0xBF126D42
+  DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=940,701 Split=Y
+    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=468,220 Selected=0x46B5E99C
+    DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=468,479 CentralNode=1
 
