--- a/SandBox/imgui.ini
+++ b/SandBox/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1027,51
+ViewportPos=1243,290
+ViewportId=0xE927CF2F
 Size=470,701
 Collapsed=1
 
