Preparing for 2D Renderer

--- a/SandBox/imgui.ini
+++ b/SandBox/imgui.ini
@@ -1,11 +1,10 @@
 [Window][Debug##Default]
-Pos=190,34
-Size=400,400
+Pos=40,67
+Size=349,56
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1243,290
-ViewportId=0xE927CF2F
+Pos=808,3
 Size=470,701
 Collapsed=1
 
@@ -35,6 +34,11 @@ Pos=0,19
 Size=824,351
 Collapsed=0
 DockId=0x00000005,0
+
+[Window][Settings]
+Pos=60,60
+Size=314,54
+Collapsed=0
 
 [Docking][Data]
 DockSpace     ID=0x3BC79352 Pos=184,111 Size=1280,701 Split=X
