Added Simple Profiling. Now console is being hidden in Dist Build.

--- a/SandBox/imgui.ini
+++ b/SandBox/imgui.ini
@@ -40,6 +40,11 @@ Pos=39,24
 Size=393,103
 Collapsed=0
 
+[Window][Profiling]
+Pos=39,129
+Size=251,55
+Collapsed=0
+
 [Docking][Data]
 DockSpace     ID=0x3BC79352 Pos=184,111 Size=1280,701 Split=X
   DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=338,701 Selected=0xBF126D42
