--- a/SandBox/imgui.ini
+++ b/SandBox/imgui.ini
@@ -36,16 +36,26 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Settings]
-Pos=7,10
-Size=392,131
+Pos=7,6
+Size=370,128
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Profiling]
 Pos=39,129
 Size=251,55
 Collapsed=0
 
+[Window][Stats]
+Pos=379,6
+Size=142,128
+Collapsed=0
+DockId=0x00000007,0
+
 [Docking][Data]
+DockNode      ID=0x00000001 Pos=119,141 Size=514,128 Split=X
+  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=370,131 Selected=0x1C33C293
+  DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=142,131 Selected=0x968648AE
 DockSpace     ID=0x3BC79352 Pos=184,111 Size=1280,701 Split=X
   DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=338,701 Selected=0xBF126D42
   DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=940,701 Split=Y
