Fixed VA overriding existing VB

--- a/SandBox/imgui.ini
+++ b/SandBox/imgui.ini
@@ -36,7 +36,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Settings]
-Pos=307,468
+ViewportPos=227,267
+ViewportId=0xA4D966FE
 Size=370,128
 Collapsed=0
 DockId=0x00000002,0
@@ -47,13 +48,15 @@ Size=251,55
 Collapsed=0
 
 [Window][Stats]
-Pos=679,468
+ViewportPos=227,267
+ViewportId=0xA4D966FE
+Pos=372,0
 Size=142,128
 Collapsed=0
 DockId=0x00000007,0
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=975,718 Size=514,128 Split=X
+DockNode      ID=0x00000001 Pos=227,267 Size=514,128 Split=X
   DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=370,131 Selected=0x1C33C293
   DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=142,131 Selected=0x968648AE
 DockSpace     ID=0x3BC79352 Pos=184,111 Size=1280,701 Split=X
