--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = Eagle/vendor/glm
 	url = https://github.com/g-truc/glm
 	branch = master
+[submodule "Eagle/vendor/yaml-cpp"]
+	path = Eagle/vendor/yaml-cpp
+	url = https://github.com/IceLuna/yaml-cpp
