Updated Help Window

--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -121,9 +121,10 @@ Size=483,118
 Collapsed=0
 
 [Window][Help]
-Pos=33,56
-Size=1556,794
+Pos=0,22
+Size=1560,757
 Collapsed=0
+DockId=0x00000009,1
 
 [Window][Editor Preferences]
 Pos=1562,781
